# rusty-raytracing-weekend

./: .gitignore  5.2.ppm  Cargo.toml  README.md
.cargo/: config.toml
src/: aabb.rs  camera.rs  hittable.rs  main.rs  material.rs  perlin.rs  ray.rs  renderer.rs  scene.rs  texture.rs  utils.rs  vec3.rs  window.rs
src/hittable/: box_rect.rs  bvh.rs  constant_medium.rs  hittable_list.rs  mod.rs  moving_sphere.rs  rotate_y.rs  sphere.rs  translate.rs  world.rs  xy_rect.rs  xz_rect.rs  yz_rect.rs
