[package]
name = "rusty-raytracing-weekend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"

[profile.dev-fast]
inherits = "release"

[dependencies]
glam = "0.20.2"
rand = "0.8.4"
pixels = "0.9.0"
winit = "0.26"
winit_input_helper = "0.11"
itertools = "0.10.3"
rayon = "1.5.1"
image = "0.23.14"
clap = { version = "3.0.10", features = ["derive"] }