[package]
name = "rusty-raytracing-weekend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = 'fat'
panic = 'abort'

[dependencies]
glam = "0.27"
rand = "0.8"
pixels = "0.13"
winit = "0.28"
winit_input_helper = "0.14"
itertools = "0.13"
rayon = "1.10"
image = "0.25"
clap = { version = "4.5", features = ["derive"] }
lazy_static = "1.4.0"